--- a/simo.css
+++ b/simo.css
@@ -1,44 +1,54 @@
-body{
-    text-align: center;
-
+body {
+  text-align: center;
 }
 
-.btn{
-    height:200px;
-    width: 200px;
-    border-radius: 30%;
-    border: 7px solid black;
-    margin: 1rem;
+.btn {
+  height: 200px;
+  width: 200px;
+  border-radius: 30%;
+  border: 7px solid black;
+  margin: 1rem;
 }
 
-.box-1{
-    display: flex;
-    justify-content: center;
-
-}
-.red{
-    background-color: red;
+.box-1 {
+  display: flex;
+  justify-content: center;
 }
 
-.green{
-    background-color: green;
+.red {
+  background-color: red;
 }
 
-.yellow{
-    background-color: yellow;
+.green {
+  background-color: green;
 }
 
-.blue{
-    background-color: blue;
+.yellow {
+  background-color: yellow;
 }
 
-.flash{
-    background-color: white;
+.blue {
+  background-color: blue;
 }
 
-.userflash{
-    background-color: black;
+.flash {
+  background-color: white;
 }
 
+.userflash {
+  background-color: black;
+}
 
+#startButton {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
 
+#startButton:hover {
+  background-color: #45a049;
+}
